--- a/ecommerce/Views/Shared/_ProductCard.cshtml
+++ b/ecommerce/Views/Shared/_ProductCard.cshtml
@@ -5,5 +5,6 @@
     <img src="@item.ImageUrl" height="100" width="100">
     <a asp-controller="Product" asp-action="Detail" asp-route-id="@item.Id"><h3>@item.Name</h3></a>
     <p>@item.Price.ToString("c")</p>
+    <a asp-controller="ShoppingCart" asp-action="AddShopingCart" asp-action-pId="@item.Id" class="btn btn-primary">Add to Cart</a>
 }
 
